--- a/package.json
+++ b/package.json
@@ -16,5 +16,13 @@
   },
   "devDependencies": {
     "react-scripts": "latest"
+  },
+  "compilerOptions": {
+    "target": "es2018",
+    "lib": ["es2018", "dom"],
+    "module": "commonjs",
+    "strict": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true
   }
 }
